@@ -1,6 +1,7 @@
 Changelog for App-Magpie
 
 {{$NEXT}}
+ - logger: get rid of Log::Dispatchouli, using colors
 
 2.003     2014-02-24 15:53:07+01:00 Europe/Paris
  - old: new set "null" if one of the old/new version is 0
